--- a/preventions.Rmd
+++ b/preventions.Rmd
@@ -34,7 +34,7 @@ options(scipen=10)
 
 ```
 
-### Do "lockdowns kill"? Assessing the association between lockdown durations and excess deaths not related to COVID-19.
+### How have states responded to the pandemic?
 
 ```{r}
 excess_deaths <- read_csv("data/Excess_Deaths_Associated_with_COVID-19.csv") %>% 
@@ -76,6 +76,39 @@ stay_at_home_orders <- read_csv("data/stay_at_home_orders_final.csv",
 
 states=right_join(states,stay_at_home_orders)
 
+preventions_df = read_csv("data/prevention_measures.csv") %>% 
+  clean_names() %>% 
+  mutate(
+    mask_mandate = str_sub(mask_mandate, 0, 3),
+    mask_mandate = ifelse(mask_mandate == "No", FALSE, TRUE),
+    travel_restrictions = ifelse(travel_restrictions == "There are no statewide restrictions.", FALSE, TRUE)
+    ) 
+
+states_df=right_join(states,preventions_df)
+
+prevent_map1 = plot_usmap(data = states_df, values = "length", color = "black") + 
+  scale_fill_continuous(name = "Length of lockdown", label = scales::comma) + 
+  theme(legend.position = "right")
+
+prevent_map2 = plot_usmap(data = states_df, values = "mask_mandate", color = "black") + 
+  
+  theme(legend.position = "right")
+
+prevent_map3 = plot_usmap(data = states_df, values = "travel_restrictions", color = "black") + 
+  theme(legend.position = "right")
+
+ggplotly(prevent_map1)
+ggplotly(prevent_map2)
+ggplotly(prevent_map3)
+```
+
+I know these are ugly... still working on them and looking for a better way to condense to one graphic
+
+
+### Do "lockdowns kill"? Assessing the association between lockdown durations and excess deaths not related to COVID-19.
+
+
+```{r, collapse=TRUE}
 states %>% 
  ggplot( aes(x=length,y=excess_not_covid_r, size=population))+
    labs(x = "Length of stay-at-home order (days)", y = "Excess COVID-19 deaths not attributed\n to COVID-19 per 100,000 residents") +
@@ -84,9 +117,6 @@ states %>%
  theme(legend.position = "none") +
   scale_y_continuous(limits=c(0, 100))
 
-```
-
-```{r}
 mod3 = lm.cluster(excess_not_covid_r ~ length, data = states, cluster="state")
 
 mod3_sum = 
@@ -114,16 +144,7 @@ We can see from this model that there is no statistically significant associatio
 
 ### Well, how about masks and travel restrictions? Did states that decreased civil liberties see a significant increase in excess deaths not related to COVID-19?  
 
-```{r}
-preventions_df = read_csv("data/prevention_measures.csv") %>% 
-  clean_names() %>% 
-  mutate(
-    mask_mandate = str_sub(mask_mandate, 0, 3),
-    mask_mandate = ifelse(mask_mandate == "No", FALSE, TRUE),
-    travel_restrictions = ifelse(travel_restrictions == "There are no statewide restrictions.", FALSE, TRUE)
-    ) 
-
-states_df=right_join(states,preventions_df)
+```{r, collapse=TRUE}
 
 mod4 = lm.cluster(excess_not_covid_r ~ mask_mandate + travel_restrictions, data = states_df, cluster="state")
 
@@ -150,10 +171,10 @@ mod4_df
 
 So masks, kill persons? Not so fast. 
 
-## What's the relationship between mask mandates and COVID-19 deaths?
+### What's the relationship between mask mandates and COVID-19 deaths?
 
 
-```{r}
+```{r, collapse = TRUE}
 mod5 = lm.cluster(covid_death_r ~ mask_mandate, data = states_df, cluster="state")
 
 
@@ -178,13 +199,10 @@ mod5_df
 ```
 
 
-## What measures did each step take to preventing the spread of COVID-19?
+### What measures did each step take to preventing the spread of COVID-19?
 
 ```{r}
-prevent_map = plot_usmap(data = states_df, values = "mask_mandate", color = "black") +   
-  theme(legend.position = "right")
 
- ggplotly(prevent_map)
 
 ```
 
