--- a/preventions.Rmd
+++ b/preventions.Rmd
@@ -22,7 +22,22 @@ library(janitor)
 library(miceadds)
 library(stringr)
 
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
 
+
+theme_set(theme_minimal()+theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colur = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 
 options(scipen=10)
 
@@ -82,18 +97,44 @@ states_df=right_join(states,preventions_df)
 
 prevent_map1 = plot_usmap(data = states_df, values = "length", color = "black") + 
   scale_fill_continuous(name = "Length of lockdown", label = scales::comma) + 
-  theme(legend.position = "right")
-
-prevent_map2 = plot_usmap(data = states_df, values = "mask_mandate", color = "black") + 
-  
-  theme(legend.position = "right")
-
-prevent_map3 = plot_usmap(data = states_df, values = "travel_restrictions", color = "black") + 
-  theme(legend.position = "right")
+  theme(legend.position = "right")+
+  labs(title = "Length of States' Stay-at-Home Orders")
 
 ggplotly(prevent_map1)
-ggplotly(prevent_map2)
-ggplotly(prevent_map3)
+
+map2_title = list(
+  text = "States that have mask mandates",
+  xref = "paper",
+  yref = "paper",
+  yanchor = "bottom",
+  xanchor = "center",
+  align = "center",
+  x = 0.5,
+  y = 0.95,
+  showarrow = FALSE)
+
+map3_title = list(
+  text = "States that have travel restrictions",
+  xref = "paper",
+  yref = "paper",
+  yanchor = "bottom",
+  xanchor = "center",
+  align = "center",
+  x = 0.5,
+  y = 0.95,
+  showarrow = FALSE)
+
+prevent_map2 = plot_usmap(data = states_df, values = "mask_mandate", color = "black") + 
+  theme(legend.position = "none")
+
+prevent_map3 = plot_usmap(data = states_df, values = "travel_restrictions", color = "black")+
+  theme(legend.position = "none")
+
+prevent_map2 = ggplotly(prevent_map2) %>% layout(annotations = map2_title)
+prevent_map3 = ggplotly(prevent_map3) %>% layout(annotations = map3_title)
+
+subplot(prevent_map2, prevent_map3)
+
 ```
 
 I know these are ugly... still working on them and looking for a better way to condense to one graphic
