--- a/casulties.Rmd
+++ b/casulties.Rmd
@@ -26,7 +26,7 @@ options(scipen=10)
 ```
 <br>  
 
-### Are there actually more deaths reported in 2020 than past years?  
+#### Are there actually more deaths reported in 2020 than past years?  
 
 To examine the issue, we use the *Excess Deaths Associated with COVID-19* from the [Centers for Disease Control and Prevention](https://data.cdc.gov/NCHS/Excess-Deaths-Associated-with-COVID-19/xkkf-xrst/). Luckily for us, the file is has already been cleaned and stored in csv format. We filtered for reported death data on all potential causes, then disregarded the most recently reported data from the past two weeks as they are incomplete reports. We then created a connected scatterplot displaying the monthly reported deaths from the past 4 years.
 
@@ -84,7 +84,7 @@ ggplotly(recorded_deaths_bar)
 
 **Answer:** There are indeed a significant increase in reported deaths in 2020. The first graph shows that deaths reported since March 2020 has exceeded the past three years by a substantial margin. In the month of May, the recorded deaths number of 2020 is almost 50% higher than the average from 2017 to 2019. The second graph shows that cumulatively, the year 2020 has seen as substantial increase in total reported deaths than the previous 3 years from January to October.  
 
-### Maybe reported deaths number was going to peak in 2020 due to demographic/environmental or other external variables anyways. Is the reported death spike not expected?
+#### Maybe reported deaths number was going to peak in 2020 due to demographic/environmental or other external variables anyways. Is the reported death spike not expected?
 
 To answer the question, we introduce the concept of excess death, which is defined as the difference between observed numbers of deaths and expected number of deaths. CDC calculates the expected number of deaths using demographic information, environmental factors as well as historical records. We calculate the excess death number by subtracting the upper bound threshold of expected death from the observed death count. Using this data, we produced a timeseries scatterplot that displays the excess death count from all causes from 2017 to 2020.
 
@@ -121,7 +121,7 @@ ggplotly(excess_deaths_graph)
 
 **Answer:** No, the spike in reported death in 2020 is not expected at all according to the CDC weekly deaths projections. Over the past four years, aside from the winter of 2017 when recorded deaths number briefly eclipsed the upperbound deaths projections, recorded deaths number has been consistently at a lower level than the upperbound deaths projections. In 2020, the excess deaths number shot way past the projection as well as historical averages.  
 
-### Okay, but how do I know this spike in reported deaths is directly correlated with COVID-19 mortalities?
+#### Okay, but how do I know this spike in reported deaths is directly correlated with COVID-19 mortalities?
 
 To visualize the correlation, we plot the [weekly reported Covid-19 death ](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab) against total weekly reported excess deaths. 
 
@@ -163,7 +163,7 @@ reg_1 %>%
 
 **Answer:** By mapping reported COVID-19 deaths against weekly excess deaths, we can see that there is a clear, significant positive correlation. After conducting the linear regression, we find out that the slope of this positive linear relationship is close to 1 with p-value practically at 0.In other words, for every 1 extra covid-19 death, the excess death number increases by 1.26. This relationship demonstrates that the increase of excess deaths from the past 10 months was highly correlated with the COVID-19 pandemic.
 
-### How much of the excess deaths increase can be attributed to COVID-19? Is the COVID-19 death reports underestimating or overestimating the true toll?
+#### How much of the excess deaths increase can be attributed to COVID-19? Is the COVID-19 death reports underestimating or overestimating the true toll?
 
 We first create a pie graph to visualize the percentage of COVID-19 and non-COVID-19 deaths of the total reported excess deaths.
 
@@ -232,7 +232,7 @@ ggplotly(covid_v_non)
 
 **Answer:** The graph above also shows a clear positive linear relationship with a relatively large $R^2$ value. Therefore, we can conclude that COVID-19 death counts that CNN brodcasts daily likely underestimates the true damage of the pandemic as many deaths reported as non-COVID related can be attributed to COVID-19 as well.
 
-### Now that we have established the severity of COVID-19 in the United States, to be specific, what states have been hurt the most by the pandemic?
+#### Now that we have established the severity of COVID-19 in the United States, to be specific, what states have been hurt the most by the pandemic?
 
 We investigate the question by calculating the magnitude of reported excess deaths relative to expected deaths reported by each state. The result would show that for every expected death in 2020, how many excess deaths there are in each state. We calculate the value using excess death counts divided by average expected death count than map those numbers to the American map by state.
  
@@ -261,7 +261,7 @@ ggplotly(map_graph_1)
 ```
 **Answer:** From the map above, we can see that New Jersey is the state that has suffered the heaviest loss during the pandemic so far. For every 100 expected deaths, New Jersey reports almost 28 excess deaths. Other states such as New York, Louisiana, Texas and Arizona also have a relatively high excess death increase. On the other hand, Maine, Hawaii, Washington and Alaska are states that have not seen a drmatic increase in excess deaths, with the increase being in low single digit.
 
-### What states have suffered the most from COVID-19 on a per capita basis?
+#### What states have suffered the most from COVID-19 on a per capita basis?
 
 To answer the question, we use the CDC estimates for total excess death for the entire year of 2020 and the state population data from the census bureau. 
 ```{r}
